# Open_Duck_Playground

./: .gitignore  README.md  TODO  TODO2  catalogue.md  pyproject.toml
analysis/: analyse_run.py  backfill_walking_metrics.py  compare_policies.py  evaluate_policy.py  evaluator_base.py  quick_standing_eval.py  quick_walking_eval.py  replay_reference.py
analysis/logs/: anchor_ext_gpu_stats.csv  anchor_gpu_stats.csv  gpu_stats.csv  q1_gpu_stats.csv  s01_gpu_stats.csv
analysis/results/: E14_baseline_pre_overhaul.json  E14_consolidated_test.json  E14_new_metrics_test.json  E14_post_refactor_test.json  E14_verdict_test.json  E19_calibration.json  E2a_150m_final.json  E5_best_65M.json  E5_calibration.json  E5_final_151M.json  E9_CP14_best.json  S10_harder_range_analysis.json  S11_gated_action_rate_analysis.json  S12_capture_point_analysis.json  S13_high_force_cp_analysis.json  S13b_high_force_cp_continued_analysis.json  S14_freq_curriculum_scratch_analysis.json  S15_history_veldamp_footplace_analysis.json  S16_backward_focus_analysis.json  T1_alive5_analysis.json  (+96 more)
docs/: 00_master_overview.md  01_training_pipeline.md  03_reference_motions.md  05_papers_analysis.md  06_smoothness_improvements.md  09_accelerometer_bias_bug.md  11_training_workflow_raw_notes.md  12_sim2real_status.md  13_idle_animations_research.md  18_reward_tuning_report.md  19_what_we_know.md  20_single_policy_test_plan.md  21_multi_policy_plan.md  22_standing_policy_research.md  23_standing_v2_testing_plan.md  WALKTHROUGH.md
scripts/: kaggle_launch.py  kaggle_notebook.py  patch_mjcf.py  reward_sweep.py
(+84 files in other folders)
